--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -1398,6 +1398,13 @@
         "withdraw_placeholder": "Bitte geben Sie Ihre %(asset)s Adresse ein",
         "withdraw_summary": "Auszahlungsübersicht",
         "withdraw_to": "Drücken Sie denn Knopf unterhalb, um eine Anlage auszuzahlen.",
+        "piratecash": {
+            "coming_soon": "Coming soon",
+            "min_amount": "Minimum amount: %(minAmount)s %(symbol)s",
+            "min_amount_error": "Please enter number >= minimum",
+            "support_block": "For support, please contact PirateCash at:",
+            "under_construction": "Under Construction"
+        },
         "xbtsx": {
             "coming_soon": "Coming soon",
             "min_amount": "Minimum amount: %(minAmount)s %(symbol)s",
