--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -1401,6 +1401,13 @@
         "withdraw_placeholder": "Пожалуйста, введите ваш %(asset)s адрес",
         "withdraw_summary": "Сводка по выводу",
         "withdraw_to": "Нажмите кнопку ниже, чтобы открыть вывод %(asset)s",
+        "piratecash": {
+            "coming_soon": "Скоро",
+            "min_amount": "Минимальная сумма: %(minAmount)s %(symbol)s",
+            "min_amount_error": "Пожалуйста, введите число ≥ минимума",
+            "support_block": "Для получения поддержки, пожалуйста, свяжитесь с PirateCash по адресу:",
+            "under_construction": "Технические работы"
+        },
         "xbtsx": {
             "coming_soon": "Скоро",
             "min_amount": "Минимальная сумма: %(minAmount)s %(symbol)s",
