--- a/app/assets/locales/locale-zh.json
+++ b/app/assets/locales/locale-zh.json
@@ -1401,6 +1401,13 @@
         "withdraw_placeholder": "请输入你的 %(asset)s 地址",
         "withdraw_summary": "提币概览",
         "withdraw_to": "点击下方按钮进行 %(asset)s 提币",
+        "piratecash": {
+            "coming_soon": "即将上线",
+            "min_amount": "最小金额：%(minAmount)s %(symbol)s",
+            "min_amount_error": "请输入大于最小金额的数量",
+            "support_block": "请联系 PirateCash 获取客户支持：",
+            "under_construction": "施工中"
+        },
         "xbtsx": {
             "coming_soon": "即将上线",
             "min_amount": "最小金额：%(minAmount)s %(symbol)s",
