#3567 Rename amount to available funds and send proper delta to the server

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -573,6 +573,7 @@
         }
     },
     "credit_offer": {
+        "current_available_balance": "Current Available Balance",
         "accepted_pawn": "Acceptable",
         "account": "Account",
         "active": "Active",
