--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -589,12 +589,14 @@
         "credit_offers": "Credit Offers",
         "credit_right_account": "Account",
         "credit_rights": "Credit Rights",
+        "current_available_balance": "Current Available Balance",
         "current_balance": "Available",
         "debt": "Debt",
         "edit": "Modify credit offer",
         "estimated_fee": "Estimated fee",
         "fee_rate": "Rate",
         "info_borrow_err": "Can't borrow from oneself ！",
+        "invalid_min_bigger_amount": "Min cannot be bigger than amount",
         "list_repay_period": {
             "period_-1": "No limit",
             "period_0": "12 Hours",
@@ -609,8 +611,10 @@
         },
         "loan_amount": "Maximum",
         "min_borrow": "Minimum",
+        "min_loan_bigger_than_balance": "Min to loan > Total credit offer balance (%(min)s > %(balance)s)",
         "mortgage_assets": "Collateral",
         "my_debt": "My debt",
+        "number_is_to_big": "You have used a big number which caused overflow",
         "operate": "Action",
         "operate_delete": "Delete",
         "operate_edit": "Modify",
@@ -627,6 +631,7 @@
         "title_add_pawn": "Add collateral",
         "title_add_whitelist": "Add white account",
         "total_amount": "Total",
+        "total_to_repay": "Repay Total",
         "validity_period": "Expiration",
         "whitelist_account": "Account"
     },
@@ -1350,6 +1355,13 @@
         "min_deposit_warning_asset": "WICHTIG: Schicken Sie nur %(coin)s zu dieser Adresse. Geringere Einzahlung als %(minDeposit)s %(coin)s oder eine andere Währung an diese Adresse, führt zum Verlust der Einzahlung.",
         "over_limit": "Limit erreicht",
         "phase_out_warning": "Warnung vor Auslauf der Anlage!",
+        "piratecash": {
+            "coming_soon": "Coming soon",
+            "min_amount": "Minimum amount: %(minAmount)s %(symbol)s",
+            "min_amount_error": "Please enter number >= minimum",
+            "support_block": "For support, please contact PirateCash at:",
+            "under_construction": "Under Construction"
+        },
         "please_generate_address": "Bitte, eine neue Adresse anfordern!",
         "purchase": "Kauf von %(asset)s",
         "purchase_1": "Schnell und einfacher Kauf von %(outputAsset)s durch die Einzahlung von %(inputAsset)s aus einer externen Wallet. Diese Dienstleistung wird Ihnen durch <a href='https://blocktrades.us/' target='blank' rel='noopener noreferrer'>Blocktrades</a> zur Verfügung gestellt.",
@@ -1402,13 +1414,6 @@
         "withdraw_placeholder": "Bitte geben Sie Ihre %(asset)s Adresse ein",
         "withdraw_summary": "Auszahlungsübersicht",
         "withdraw_to": "Drücken Sie denn Knopf unterhalb, um eine Anlage auszuzahlen.",
-        "piratecash": {
-            "coming_soon": "Coming soon",
-            "min_amount": "Minimum amount: %(minAmount)s %(symbol)s",
-            "min_amount_error": "Please enter number >= minimum",
-            "support_block": "For support, please contact PirateCash at:",
-            "under_construction": "Under Construction"
-        },
         "xbtsx": {
             "coming_soon": "Coming soon",
             "min_amount": "Minimum amount: %(minAmount)s %(symbol)s",
