--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -589,12 +589,14 @@
         "credit_offers": "Credit Offers",
         "credit_right_account": "Account",
         "credit_rights": "Credit Rights",
+        "current_available_balance": "Current Available Balance",
         "current_balance": "Available",
         "debt": "Debt",
         "edit": "Modify credit offer",
         "estimated_fee": "Estimated fee",
         "fee_rate": "Rate",
         "info_borrow_err": "Can't borrow from oneself ！",
+        "invalid_min_bigger_amount": "Min cannot be bigger than amount",
         "list_repay_period": {
             "period_-1": "No limit",
             "period_0": "12 Hours",
@@ -609,8 +611,10 @@
         },
         "loan_amount": "Maximum",
         "min_borrow": "Minimum",
+        "min_loan_bigger_than_balance": "Min to loan > Total credit offer balance (%(min)s > %(balance)s)",
         "mortgage_assets": "Collateral",
         "my_debt": "My debt",
+        "number_is_to_big": "You have used a big number which caused overflow",
         "operate": "Action",
         "operate_delete": "Delete",
         "operate_edit": "Modify",
@@ -627,6 +631,7 @@
         "title_add_pawn": "Add collateral",
         "title_add_whitelist": "Add white account",
         "total_amount": "Total",
+        "total_to_repay": "Repay Total",
         "validity_period": "Expiration",
         "whitelist_account": "Account"
     },
@@ -1350,6 +1355,13 @@
         "min_deposit_warning_asset": "IMPORTANTE: Manda solamente %(coin)s a este dirrecion de deposito en el blockchain nativa a %(coin)s. Enviar menos que %(minDeposit)s %(coin)s o cualquier otra divisa a este dirrecion puede resultar en la perdida de su deposito.",
         "over_limit": "Límite alcanzado",
         "phase_out_warning": "Recomendamos usar los nuevos modales {deposit_modal_link} y {withdraw_modal_link} como este pagina será eliminada",
+        "piratecash": {
+            "coming_soon": "Viene pronto",
+            "min_amount": "Monto minimo: %(minAmount)s %(symbol)s",
+            "min_amount_error": "Por favor ingrese el número >= minimo",
+            "support_block": "Para soporte, contacte a PirateCash en:",
+            "under_construction": "En construcción"
+        },
         "please_generate_address": "Por favor, obtenga una nueva dirección",
         "purchase": "Compra %(asset)s",
         "purchase_1": "Compra rápida y fácil %(outputAsset)s usando %(inputAsset)s de una billetera externa. Este servicio es provisto por <a href='https://blocktrades.us/' target='blank' rel='noopener noreferrer'>Blocktrades</a>",
@@ -1402,13 +1414,6 @@
         "withdraw_placeholder": "Por favor introduzca su direcciòn de %(asset)s ",
         "withdraw_summary": "Resumen de retiros",
         "withdraw_to": "Haga clic en el botón de abajo para abrir un %(asset)s retiro",
-        "piratecash": {
-            "coming_soon": "Viene pronto",
-            "min_amount": "Monto minimo: %(minAmount)s %(symbol)s",
-            "min_amount_error": "Por favor ingrese el número >= minimo",
-            "support_block": "Para soporte, contacte a PirateCash en:",
-            "under_construction": "En construcción"
-        },
         "xbtsx": {
             "coming_soon": "Viene pronto",
             "min_amount": "Monto minimo: %(minAmount)s %(symbol)s",
