chore: streamline lcoales

--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -618,6 +618,9 @@
         "operate": "Action",
         "operate_delete": "Delete",
         "operate_edit": "Modify",
+        "override_authority_warning": "Be careful, this asset has an `override_authority` setting, so the owner of the asset could transfer it back to himself with no agreement",
+        "override_authority_warning_p1": "%(symbol)s is controlled by its issuer",
+        "override_authority_warning_p2": "Do your own due diligence when using ",
         "pawn_amount": "Amount",
         "plh_input_asset_name": "Enter asset",
         "plh_select_validity_period": "Choose an expiration date",
@@ -946,6 +949,7 @@
             "fee_pool": {
                 "accumulated_collateral_fees": "Accumulated collateral fees",
                 "claim_balance": "Gebührenguthaben einfordern",
+                "claim_collateral_fees": "Claim fees",
                 "claim_fees": "Gebühren einfordern",
                 "claim_pool_text": "Der Eigentümer der Anlage kann mit diesem Formular Kapital vom Gebührenspeicher abheben:",
                 "claim_text": "Der Anlagen-Herausgeber kann die zusammengetragenen Anteile hier beanspruchen",
@@ -2535,6 +2539,7 @@
         "copy_tip": "Klicken um den Text in die Zwischenablage zu kopieren.",
         "cr_danger": "Bei dieser Position findet ein Wertausgleich (margin call) statt. Ziehen Sie in Betracht Sicherheiten hinzuzufügen, um die Sicherheiten-Ratio über %(mr)s anzuheben oder Ihre Position zu schließen.",
         "cr_warning": "Diese Position hat ein geringes Sicherheitslevel und es findet ein Werteausgleich (margin call) statt, wenn die Sicherheiten-Ratio unter %(mr)s fällt. Ziehen Sie in Betracht Sicherheiten hinzuzufügen oder die Position zu schließen.",
+        "create_lock_periods": "Lock Periods",
         "debug_report": "Report an error or unexpected behavior you have found. Click to see the browser console log, create a screenshot and instructions how to best report your issue.",
         "deposit_tip": "Zum Abschließen der Einzahlung, gehen Sie auf die externe %(asset)s Wallet und führen Sie eine Überweisung an die Adresse auf dieser Seite durch. Wenn eine Notiz benötigt wird, muss diese angegeben werden, damit Ihre Übwereisung richtig verbucht werden kann. Sie erhalten Ihre Einzahlung, sobald diese bestätigt worden ist.",
         "disconnected": "Sie sind nicht mit einem API Knoten verbunden, versuchen Sie neu zu laden oder wählen einen anderen Verbindungsknoten in den Einstellungen.",
