--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -618,6 +618,9 @@
         "operate": "Action",
         "operate_delete": "Delete",
         "operate_edit": "Modify",
+        "override_authority_warning": "Be careful, this asset has an `override_authority` setting, so the owner of the asset could transfer it back to himself with no agreement",
+        "override_authority_warning_p1": "%(symbol)s is controlled by its issuer",
+        "override_authority_warning_p2": "Do your own due diligence when using ",
         "pawn_amount": "Amount",
         "plh_input_asset_name": "Enter asset",
         "plh_select_validity_period": "Choose an expiration date",
@@ -946,6 +949,7 @@
             "fee_pool": {
                 "accumulated_collateral_fees": "Accumulated collateral fees",
                 "claim_balance": "Balance de la cuota de la reclamación",
+                "claim_collateral_fees": "Claim fees",
                 "claim_fees": "Reclamar tarifas",
                 "claim_pool_text": "El propietario del activo puede retirar fondos del conjunto de tarifas utilizando este formulario:",
                 "claim_text": "El emisor del activo puede reclamar cualquier comisiòn acumulada aquí.",
@@ -2535,6 +2539,7 @@
         "copy_tip": "Haga clic aquí para copiar el texto a su portapapeles",
         "cr_danger": "Esta posición está siendo llamada a margen. Considere de agregar colateral para llevar la proporción de colateral arriba de %(mr)s o cerrar la posición.",
         "cr_warning": "Esta posición tiene un bajo nivel de colateral, y será una llamada a margen si el índice de colateral cae por debajo de %(mr)s. Considera de añadir colateral o cerrar la posición.",
+        "create_lock_periods": "Lock Periods",
         "debug_report": " Reporte un error o comportamiento inesperado que haya encontrado. Haga clic para ver el registro de la consola del navegador, cree una captura de pantalla e instrucciones sobre cómo informar mejor su problema.",
         "deposit_tip": "para completar el depósito, vaya a su billetera externa %(asset)s y haz una transferencia a la dirección listada en esta página. Recibirá el depósito tan pronto como haya sido confirmado. Si se muestra una nota , es esencial que usted tiene que incluir esta nota en su transferencia.",
         "disconnected": "No estás conectado a la API de un nodo , intenta volver a cargar o establecer un nuevo punto de acceso en la Configuración",
