--- a/app/assets/locales/locale-it.json
+++ b/app/assets/locales/locale-it.json
@@ -618,6 +618,9 @@
         "operate": "Action",
         "operate_delete": "Delete",
         "operate_edit": "Modify",
+        "override_authority_warning": "Be careful, this asset has an `override_authority` setting, so the owner of the asset could transfer it back to himself with no agreement",
+        "override_authority_warning_p1": "%(symbol)s is controlled by its issuer",
+        "override_authority_warning_p2": "Do your own due diligence when using ",
         "pawn_amount": "Amount",
         "plh_input_asset_name": "Enter asset",
         "plh_select_validity_period": "Choose an expiration date",
@@ -940,6 +943,7 @@
             "fee_pool": {
                 "accumulated_collateral_fees": "Accumulated collateral fees",
                 "claim_balance": "Claim fee pool balance",
+                "claim_collateral_fees": "Claim fees",
                 "claim_fees": "Riscuoti commissioni",
                 "claim_pool_text": "The asset owner may withdraw funds from the fee pool using this form:",
                 "claim_text": "L'erogatore dell'asset può riscuotere qui eventuali commissioni accumulate.",
@@ -2529,6 +2533,7 @@
         "copy_tip": "Clicca per copiare il testo",
         "cr_danger": "Questa posizione è chiamata a margine in questo momento. Considera la possibilità di aggiungere garanzia per portare il 'collateral ratio' sopra %(mr)s, oppure di chiudere la posizione.",
         "cr_warning": "Questa posizione ha un basso livello di garanzia, e sarà chiamata a margine se il 'collateral ratio' scende sotto %(mr)s. Valuta se vuoi aggiungere ulteriore garanzia o chiudere la posizione.",
+        "create_lock_periods": "Lock Periods",
         "debug_report": "Report an error or unexpected behavior you have found. Click to see the browser console log, create a screenshot and instructions how to best report your issue.",
         "deposit_tip": "Per completare il deposito, vai al tuo portafoglio %(asset)s ed effettua un trasferimento all'indirizzo mostrato in questa pagina. Riceverai il deposito non appena il trasferimento sarà confermato. Se viene mostrato un memo, è essenziale che tu lo includa nel tuo trasferimento.",
         "disconnected": "Non sei connesso a un nodo API, prova a ricaricare o a scegliere un nuovo punto di accesso nelle Impostazioni",
