--- a/app/assets/locales/locale-zh.json
+++ b/app/assets/locales/locale-zh.json
@@ -618,6 +618,9 @@
         "operate": "操作",
         "operate_delete": "删除",
         "operate_edit": "修改",
+        "override_authority_warning": "Be careful, this asset has an `override_authority` setting, so the owner of the asset could transfer it back to himself with no agreement",
+        "override_authority_warning_p1": "%(symbol)s is controlled by its issuer",
+        "override_authority_warning_p2": "Do your own due diligence when using ",
         "pawn_amount": "抵押数量",
         "plh_input_asset_name": "请输入资产名...",
         "plh_select_validity_period": "选择有效期",
@@ -946,6 +949,7 @@
             "fee_pool": {
                 "accumulated_collateral_fees": "费用累积抵押品",
                 "claim_balance": "申领手续费池余额",
+                "claim_collateral_fees": "Claim fees",
                 "claim_fees": "领取手续费",
                 "claim_pool_text": "资产发行人可以使用此表单从手续费池中提出资金。",
                 "claim_text": "资产所有者可以领取这里累积的任何手续费。",
@@ -2535,6 +2539,7 @@
         "copy_tip": "点击这里将内容复制到剪贴板上",
         "cr_danger": "该债仓的抵押率已低于要求水平。请考虑补仓以至少将抵押率提高到 %(mr)s 或进行平仓。",
         "cr_warning": "该债仓已接近强制平仓触发价。如果抵押率低于 %(mr)s，该债仓将被强制平仓，请考虑补仓或平仓。",
+        "create_lock_periods": "Lock Periods",
         "debug_report": "报告你发现的错误或者意外事件。点击查看浏览器控制日志，创建屏幕截图及说明来尽可能详细的上报你的问题。",
         "deposit_tip": "请到 %(asset)s 的外盘钱包进行转账操作以进行充值，转账地址即列在当前页的地址。一旦转账得到确认，您将完成充值。如果此页转账信息中包含备注，您需要在转账时也将备注包括进去。",
         "disconnected": "您没有连接到任何 API 节点，请尝试刷新页面或在设置选项选择一个新的接入点。",
