--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -618,6 +618,9 @@
         "operate": "Action",
         "operate_delete": "Delete",
         "operate_edit": "Modify",
+        "override_authority_warning": "Be careful, this asset has an `override_authority` setting, so the owner of the asset could transfer it back to himself with no agreement",
+        "override_authority_warning_p1": "%(symbol)s is controlled by its issuer",
+        "override_authority_warning_p2": "Do your own due diligence when using ",
         "pawn_amount": "Amount",
         "plh_input_asset_name": "Enter asset",
         "plh_select_validity_period": "Choose an expiration date",
@@ -946,6 +949,7 @@
             "fee_pool": {
                 "accumulated_collateral_fees": "Accumulated collateral fees",
                 "claim_balance": "Востребовать остаток пула комиссий",
+                "claim_collateral_fees": "Claim fees",
                 "claim_fees": "Востребовать комиссии",
                 "claim_pool_text": "Владелец актива может выводить средства из пула комиссий, используя эту форму:",
                 "claim_text": "Владелец актива может востребовать любые накопленные комиссии здесь.",
@@ -2535,6 +2539,7 @@
         "copy_tip": "Нажмите, чтобы скопировать текст в буфер обмена",
         "cr_danger": "В данный момент на эту позицию затребовано дополнительное обеспечение (маржин колл). Вы можете добавить обеспечение, чтобы поднять его уровень выше %(mr)s, или закрыть позицию.",
         "cr_warning": "У данной позиции низкий уровень обеспечения – она попадёт под маржин колл (будет принудительно закрыта), если уровень залогового обеспечения упадет ниже %(mr)s. Вы можете увеличить обеспечение или закрыть позицию.",
+        "create_lock_periods": "Lock Periods",
         "debug_report": "Сообщите нам об обнаруженной ошибке или неожиданном поведении программы. Нажмите, чтобы просмотреть консольный журнал браузера, создать скриншот и ознакомиться с инструкцией по способам сообщения о своей проблеме.",
         "deposit_tip": "Чтобы разместить депозит, зайдите в свой внешний %(asset)s кошелёк и переведите средства на адрес, указанный на этой странице. Вы получите депозит, как только перевод будет подтвержден. Если там указано мемо, то его обязательно необходимо использовать в вашем переводе.",
         "disconnected": "Вы не подключены к узлу API, попробуйте перезагрузиться или задать новую точку доступа в настройках",
