--- a/app/assets/locales/locale-tr.json
+++ b/app/assets/locales/locale-tr.json
@@ -618,6 +618,9 @@
         "operate": "Action",
         "operate_delete": "Delete",
         "operate_edit": "Modify",
+        "override_authority_warning": "Be careful, this asset has an `override_authority` setting, so the owner of the asset could transfer it back to himself with no agreement",
+        "override_authority_warning_p1": "%(symbol)s is controlled by its issuer",
+        "override_authority_warning_p2": "Do your own due diligence when using ",
         "pawn_amount": "Amount",
         "plh_input_asset_name": "Enter asset",
         "plh_select_validity_period": "Choose an expiration date",
@@ -940,6 +943,7 @@
             "fee_pool": {
                 "accumulated_collateral_fees": "Accumulated collateral fees",
                 "claim_balance": "Talep ücreti havuz bakiyesi",
+                "claim_collateral_fees": "Claim fees",
                 "claim_fees": "Ücretleri talep et",
                 "claim_pool_text": "Varlık sahibi, bu formu kullanarak ücret havuzundan para çekebilir:",
                 "claim_text": "Dijital varlık sahibi burada biriken ücretleri talep edebilir.",
@@ -2529,6 +2533,7 @@
         "copy_tip": "Metni kopyalamak için tıklayın",
         "cr_danger": "Pozisyonun teminat seviyesi itfa değerinin altındadır. Teminat oranını en az %(mr)s yapacak şekilde teminat yatırabilir ya da pozisyonu kapatabilirsiniz.",
         "cr_warning": "Pozisyonun teminat seviyesi düşük durumdadır ve %(mr)s seviyesinin altına düştüğünde teminat tamamlama çağrısı yapılacaktır.",
+        "create_lock_periods": "Lock Periods",
         "debug_report": "Bulduğunuz bir hatayı veya beklenmeyen davranışı bildirin. Tarayıcı konsolu günlüğünü görmek, bir ekran görüntüsü oluşturmak ve sorununuzu en iyi nasıl bildireceğinize ilişkin talimatlar için tıklayın.",
         "deposit_tip": "Yatıma işlemini tamamlamak için aşağıdaki adrese %(asset)s gönderin. Transfer işleminiz onaylandığı zaman bakiyenizi yüklenecektir. Aşağıda bir işem açıklaması (memo) belirtilmişse transfere o açıklamayı eklemeniz ZORUNLUDUR.",
         "disconnected": "Bir API düğümüne bağlı değilsiniz, yeniden yüklemeyi veya Ayarlar'da yeni bir erişim noktası ayarlamayı deneyin.",
